--- a/bouquet_generator.html
+++ b/bouquet_generator.html
@@ -406,12 +406,12 @@
         </div>
         <div id="description-box">
             <h1>GUIDE</h1>
-            <p>1. 한 꽃다발은 총 7개의 꽃으로 이루어져 있습니다!<br><br> 2. 꽃을 더블 클릭하면 좌우를 반전 시킬 수 있습니다! <br><br> 3. 꽃을 드래그하고 있는 상태에서 스페이스바를  
-             누르면 해당 <br> 꽃을 뒤로 보낼 수 있습니다!</p>
+            <p>1. 한 꽃다발은 총 7개의 꽃으로 이루어져 있습니다.<br><br> 2. 꽃을 더블 클릭하면 좌우를 반전 시킬 수 있습니다. <br><br> 3. 꽃을 드래그하고 있는 상태에서 스페이스바를  
+             누르면 해당 <br> 꽃을 뒤로 보낼 수 있습니다.</p>
         </div>
         <div id="complete-text-area">
         <h1><span class="special-font2">( </span><span class="special-font">LOVE</span><span class="special-font2"> ) </span>BOUQUET IS COMPLETE!</h1>
-        <p>꽃다발을 완성했어요! 함께 전할 편지를 남기러 가볼까요?</p>
+        <p>꽃다발을 완성했어요! 상대에게 전달하러 가볼까요?</p>
     </div>
 
     <div id="complete-button-area">
