--- a/delivery.html
+++ b/delivery.html
@@ -94,7 +94,8 @@
         
         /* [수정] 초기 신호 위치: 꽃다발과 동일하게 완전 하단 */
         #initial-signal {
-            bottom: 5vh; /* 꽃다발이 있는 영역에 배치 */
+            bottom: -20vh; /* 꽃다발이 있는 영역에 배치 */
+            left: 54%;
             top: auto !important; /* JS의 top 설정을 무시 */
         }
 
