--- a/bouquet_generator.html
+++ b/bouquet_generator.html
@@ -410,7 +410,7 @@
              누르면 해당 <br> 꽃을 뒤로 보낼 수 있습니다.</p>
         </div>
         <div id="complete-text-area">
-        <h1><span class="special-font2">( </span><span class="special-font">LOVE</span><span class="special-font2"> ) </span>BOUQUET IS COMPLETE!</h1>
+        <h1><span class="special-font2">( </span><span class="special-font">BOUQUET</span><span class="special-font2"> ) </span>IS COMPLETE!</h1>
         <p>꽃다발을 완성했어요! 상대에게 전달하러 가볼까요?</p>
     </div>
 
