--- a/delivery.html
+++ b/delivery.html
@@ -63,8 +63,8 @@
             cursor: grab;
             user-select: none;
             /* [수정] 완전 하단으로 배치 */
-            left: 50%; /* 중앙 정렬 */
-            bottom: 0; /* 완전 하단 */
+            left: 54%; /* 중앙 정렬 */
+            bottom: -20vh; /* 완전 하단 */
             transform: translateX(-50%); /* 중앙 정렬 보정 */
             z-index: 20;
             transition: opacity 1.5s ease-out; 
@@ -94,8 +94,8 @@
         
         /* [수정] 초기 신호 위치: 꽃다발과 동일하게 완전 하단 */
         #initial-signal {
-            bottom: -20vh; /* 꽃다발이 있는 영역에 배치 */
-            left: 60%;
+            bottom: 5vh; /* 꽃다발이 있는 영역에 배치 */
+            
             top: auto !important; /* JS의 top 설정을 무시 */
         }
 
