--- a/bouquet_generator.html
+++ b/bouquet_generator.html
@@ -858,7 +858,7 @@ if(Go) {
                     sessionStorage.removeItem('senderName'); 
                     sessionStorage.removeItem('recipientName'); 
                     
-                    Go.textContent = "WRITE LETTER";
+                    Go.textContent = "GO";
                     Go.disabled = false;
                     window.location.href = 'delivery.html';
 
