Update delivery instructions for bouquet transfer

--- a/delivery.html
+++ b/delivery.html
@@ -540,7 +540,7 @@
 
             
 
-            showGuide("상대방 앞에 도착했어요. 꽃다발을 상대에게 전달해주세요! 💐", 3000, () => {
+            showGuide("상대방 앞에 도착했어요. 꽃다발을 드래그해 상대에게 전달해주세요!", 3000, () => {
 
                 // 전달 모드 시작: 꽃다발을 끌어서 중앙 목표 지점에 놓도록 안내
 
@@ -814,7 +814,7 @@
 
         setTimeout(() => {
 
-            showGuide("저 앞에 상대방이 기다리고 있어요. 꽃다발을 잡고 걸어가세요.", 3000, () => {
+            showGuide("저 앞에 상대방이 기다리고 있어요. <br>꽃다발을 계속 클릭한 상태로 상대에게 걸어가세요.", 3000, () => {
 
                 initialGuideCompleted = true; // 초기 안내 완료
 
