--- a/delivery.html
+++ b/delivery.html
@@ -814,7 +814,7 @@
 
         setTimeout(() => {
 
-            showGuide("저 앞에 상대방이 기다리고 있어요. <br>꽃다발을 계속 클릭한 상태로 상대에게 걸어가세요.", 3000, () => {
+            showGuide("저 앞에 상대방이 있어요. 꽃다발을 계속 클릭한 상태로 상대에게 걸어가세요.", 3000, () => {
 
                 initialGuideCompleted = true; // 초기 안내 완료
 
